# UnitTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE.md  README.md  UnitTest.cmake  build.bat
cmake/: Config.cmake.in  ExampleMaster.cmake  QtLocator.cmake  dependencies.cmake  utility.cmake
core/: CMakeLists.txt
core/inc/: Test.h  UnitTest.h  UnitTest_base.h  UnitTest_debug.h  UnitTest_global.h  UnitTest_info.h  UnitTest_meta.h.in
core/src/: Test.cpp  UnitTest_debug.cpp  UnitTest_info.cpp
examples/: CMakeLists.txt
examples/LibraryExample/: CMakeLists.txt  main.cpp
unittests/: CMakeLists.txt  UnitTest.cmake
unittests/ExampleTest/: CMakeLists.txt  main.cpp
unittests/ExampleTest/tests/: TST_simple.h
